log/build_2023-11-23_21-08-39/joystick_sub/stdout_stderr.log
running egg_info
writing manifest file '../../build/joystick_sub/joystick_sub.egg-info/SOURCES.txt'
running build
running build_py
copying joystick_sub/joystick_sub.py -> /home/aiclub/Desktop/TEL_Robot/build/joystick_sub/build/lib/joystick_sub
copying joystick_sub/gyrosensor.py -> /home/aiclub/Desktop/TEL_Robot/build/joystick_sub/build/lib/joystick_sub
running install
running install_lib
byte-compiling /home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py to joystick_sub.cpython-38.pyc
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py", line 92
    ll = np.array(self.aoa_angle.)
                                 ^
SyntaxError: invalid syntax

byte-compiling /home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/gyrosensor.py to gyrosensor.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/joystick_sub/joystick_sub.egg-info to /home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/aiclub/Desktop/TEL_Robot/build/joystick_sub/install.log'
